--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
+  <script>
+      const STARTER_SYSTEM_ID = '<%= get_auth_token %>';
+  </script>
+
   <%= javascript_pack_tag 'app' %>
   <%= stylesheet_link_tag 'app' %>
 </head>
