--- a/app/views/shared/_bootstrap_nav.html.erb
+++ b/app/views/shared/_bootstrap_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light border-bottom shadow">
+<nav class="navbar navbar-expand-lg navbar-light border-bottom shadow-sm">
   <div class="container">
 
     <%= link_to "Rails MVP Starter", root_path, class: 'navbar-brand' %>
